# labgrid

./: .codecov.yaml  .coveragerc  .dockerignore  .flake8  .git_archival.txt  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGES.rst  CODEOWNERS  LICENSE.txt  MANIFEST.in  Pipfile  README.grpc  README.rst  ci-requirements.txt  crossbar-requirements.txt  deb-requirements.txt  dev-requirements.txt  doc-requirements.txt  docker-requirements.txt  graph-requirements.txt  kasa-requirements.txt  modbus-requirements.txt  modbusrtu-requirements.txt  mqtt-requirements.txt  nstest.py  onewire-requirements.txt  proxyhelper.py  pyproject.toml  pyvisa-requirements.txt  requirements.txt  setup.cfg  setup.py  snmp-requirements.txt  tox.ini  vxi11-requirements.txt  xena-requirements.txt
.crossbar/: .gitignore  config-anonymous.yaml  config.yaml
.github/: pull_request_template.md
.github/workflows/: build-and-release.yml  docker.yml  push-pr-unit-tests.yml  reusable-unit-tests-docker.yml  reusable-unit-tests.yml  scheduled-unit-tests.yml  unit-tests.yml
contrib/: README.rst  coordinator-statsd.py  labgrid-webapp  requirements-webapp.txt  sync-places.py
contrib/completion/: _labgrid-client.zsh  labgrid-client.bash
contrib/systemd/: labgrid-coordinator.service  labgrid-exporter.service
contrib/u-boot/: .gitignore  _ub-bisect-try  check_lab.py  conftest.py  example_env.cfg  example_export.yaml  example_places.yaml  get_args.sh  index.rst  lg-client  lg-env  test_smoke.py  ub-bisect  ub-cli  ub-int  ub-pyt  ub-smoke
debian/: changelog  control  copyright  labgrid-base.manpages  labgrid-bound-connect  labgrid-client  labgrid-client.install  labgrid-client.manpages  labgrid-coordinator  labgrid-coordinator-venv.install  labgrid-coordinator-venv.labgrid-coordinator.service  labgrid-exporter  labgrid-exporter.install  labgrid-exporter.manpages  labgrid-exporter.sysuser  labgrid-pytest  labgrid-raw-interface  labgrid-suggest  labgrid-venv.install  labgrid-venv.labgrid-exporter.service  labgrid-venv.manpages  labgrid-venv.postinst  labgrid.install  labgrid.manpages  labgrid.tmpfile  labgrid.triggers  labgrid.yaml  rules
debian/patches/: 0001-Fix-coordinator-config-paths.patch  0002-Fix-coordinator-service-path.patch  0003-Fix-exporter-service-path.patch  series
doc/: Makefile  RELEASE.rst  changes.rst  components.rst  conf.py  configuration.rst  design_decisions.rst  development.rst  getting_started.rst  index.rst  man.rst  overview.rst  usage.rst  use_cases.rst
doc/man/: client.rst  coordinator.rst  device-config.rst  exporter.rst  pytest.rst  suggest.rst
docker/: Dockerfile  README.rst  build.sh
docker/base/: Dockerfile
docker/client/: Dockerfile
docker/coordinator/: Dockerfile
docker/exporter/: Dockerfile  entrypoint.sh
docker/staging/: docker-compose.yml
dockerfiles/: Dockerfile  README.rst  build.sh
dockerfiles/base/: Dockerfile
dockerfiles/client/: Dockerfile
dockerfiles/coordinator/: Dockerfile
dockerfiles/exporter/: Dockerfile  entrypoint.sh
dockerfiles/staging/: docker-compose.yml
examples/: pytest.ini  qemu-run.py
examples/barebox/: conftest.py  local-usb.env  local-usb.yaml  local.env  local.yaml  test_barebox.py  test_bootchooser.py  test_sleep.py  test_state.py  test_watchdog.py
examples/bcu/: bcu_example.py  local.yaml
examples/deditec-relais8/: deditec.py  deditec_remote.py  export-didicontrol.yaml  import-dedicontrol.yaml
examples/docker/: README.md  conftest.py  env.yaml  test_shell.py
examples/hawkbit/: test_hawkbit.py
examples/infoprotocol/: conftest.py  env.yaml  test_info.py
examples/kmtronic/: kmtronic-exporter.yaml  kmtronic.yaml
examples/lauterbach/: README.md  blackpill.cmm  library.py  local.yaml  remote.yaml  remote_usb.yaml  test_local.py  test_remote.py
examples/libgpio/: export-gpio.yaml  import-gpio.yaml  libgpio.py
examples/managed-gpio/: import-gpio.yaml  managed_gpio.py
examples/modbusrtu/: conftest.py  env.yaml  test_modbusrtu_example.py
examples/network-test/: env.yaml  pkg-replay-record.py
examples/networkmanager/: nm.env  nm.py
examples/power/: env.yaml  power_example.py
examples/pyvisa/: env.yaml  pyvisa_example.py
examples/qemu-networking/: conftest.py  local.yaml  qemunetworkstrategy.py  test_qemu_networking.py
examples/remote/: remote.yaml  test_barebox.py
examples/remote_tmpdir/: hello.sh  test_remote_tmpdir.py
examples/rpiboot/: client.yaml  exporter.yaml  write-image.py
examples/shell/: conftest.py  env.yaml  local.env  local.yaml  test_hwclock.py  (+3 more)
helpers/: labgrid-bound-connect  labgrid-can-interface  labgrid-macvtap-fwd  labgrid-raw-interface  labgrid-tap-fwd  labgrid-vpn-helper
labgrid/: __init__.py  binding.py  config.py  consoleloggingreporter.py  environment.py  exceptions.py  factory.py  logging.py  power_management.py  serial_expect.py  step.py  stepreporter.py  tapfwd.py  taptunnel.py  target.py  var_dict.py
man/: Makefile  labgrid-client.1  labgrid-client.rst  labgrid-coordinator.1  labgrid-coordinator.rst  labgrid-device-config.1  labgrid-device-config.5  labgrid-device-config.rst  labgrid-exporter.1  labgrid-exporter.rst  labgrid-pytest.1  labgrid-pytest.7  labgrid-pytest.rst  labgrid-suggest.1  labgrid-suggest.rst
tests/: conftest.py  test_agent.py  test_autoinstall.py  test_bareboxdriver.py  test_can.py  test_client.py  test_client_unit.py  test_config.py  test_coordinator.py  test_crossbar.py  test_dediprogflasher.py  test_docker.py  test_environment.py  test_eth008digitaloutput.py  test_ethernetport.py  test_export.py  test_exporter_trace.py  test_externalconsoledriver.py  test_factory.py  test_filedigitaloutput.py  test_fixtures.py  test_flags.py  test_flashrom.py  test_flashscript.py  test_ftdigpiodriver.py  test_gpiodriver.py  test_graphstrategy.py  test_hawkbit.py  test_httpdigitalout.py  test_httpvideo.py  test_hub_expansion.py  test_interceptor_client.py  test_interceptor_server.py  test_jlink.py  test_joulescope_agent.py  test_joulescope_hw.py  test_joulescopedriver.py  test_kmtronicrelay.py  test_laa.py  test_lauterbach.py  (+54 more)
(+337 files in other folders)
